CHANGES:

22/8/2014:
- MacDraw II: add a parser for MacDraw II v1.0-v1.1

-------- version 0.3.3 (start)  -------------

28/7/2014:
- AppleWorks/ClarisWorks: manage multiple headers/footers + better rebuilding of complex group

1/7/2014:
- MacDraw: add a parser for v0 and v1 documents

22/6/2014:
- RagTime: add a parser to parse v2 and v3 documents

6/6/2014:
- rewrite MWAWCellContent::double2Date to avoid problem with 32/64 time_t values
- correct many <<small>> problems

-------- version 0.3.2 (start)  -------------

23/5/2014
- create version 0.3.1 to be in correspondance with librevenge-0.0.0

13/5/2014
- add code to create embedded spreadsheet
- AppleWorks/ClarisWorks: send page's embedded spreadsheets as spreadsheet (instead of table) 

-------- version 0.3.1 (start)  -------------

16/3/2014
- GreatWorks: add a database parser which uses spreadsheet interface

8/3/2014
- BeagleWorks/WordPerfect Works: add a database parser which uses spreadsheet interface

4/3/2014
- MicrosoftWorks: add a database parser which uses spreadsheet interface

3/29/2014
- MicrosoftWorks: add a graphic parser(must find more document to improve it)

3/21/2014
- GreatWorks: replace the parser of vector graphic documents by a parser
  which generates graphic documents + correct to code to reconstruct arc/pie

3/19/2014
- BeagleWorks/WordPerfect Works: add parser of vector graphic documents

3/13/2014
- SuperPaint: add a parser of drawing SuperPaint v1 document

3/7/2014
- SuperPaint: add a parser of Paint SuperPaint v1 document

3/5/2014:
- AppleWorks/ClarisWorks: make the parser of the paint documents
   a parser which creates graphic (instead of a text document).
- MacPaint: add a parser of MacPaint document + move the code
   to parse GreatWorks v1 paint files (which have the same format)
   in this parser.
3/4/2014:
- GreatWorks: add parser of paint documents
3/3/2014:
- BeagleWorks/WordPerfect Work: add parser of paint documents
2/28/2014: